# exile-ui-es

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml
.hermes/plans/: 2026-07-13_191700-exile-ui-es-translation-tool.md
data/: poe_terms_es.json
data/patches/: UI.txt.patch.json  client.txt.patch.json
data/spanish/: Betrayal.json  TLDR-tooltips.json  UI.txt  [leveltracker] areas 2.json  [leveltracker] areas.json  [leveltracker] default guide 2.json  [leveltracker] default guide.json  [leveltracker] gems 2.json  [leveltracker] gems.json  [sanctum] relics 2.json  [sanctum] relics.json  anoints 2.json  anoints.json  client.txt  essences.json  help tooltips.json  maps 2.json  mercenaries.json  timeless jewels.json
exile_ui_es/: cli.py  downloader.py  parser.py  patcher.py
exile_ui_es/translations/: client.py  game_data.py  guide.py  ui.py
tests/: test_cli.py  test_downloader.py  test_parser.py  test_patcher.py  test_poe_terms.py  test_translations_client.py  test_translations_game_data.py  test_translations_guide.py  test_translations_ui.py
